src/components/body/body.module.scss
.root {
}
.body {
  padding: 20px;
  display: flex;
  flex-direction: row;
  align-items: stretch;
  justify-items: start;
  justify-content: start;
  align-content: space-around;
  height: 500px;
}
.input {
}
.center {
  display: flex;
  text-align: center;
  padding-right: 10px;
  padding-left: 0px;
  width: 60vw;
  flex-direction: row;
  justify-items: start;
  justify-content: space-around;
  align-items: start;
  background-color: rgba(217, 217, 217, 0.08);
}
.sidebar {
  display: flex;
  flex-direction: row;
  justify-items: start;
  justify-content: start;
  width: 248px;
  background-color: rgba(231, 231, 231, 0.08);
}

